-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: client-libs
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8207105 | 12 | Philip Race | P3 | Resolved | Fixed | b03 |
| JDK-8207456 | 11.0.2 | Philip Race | P3 | Resolved | Fixed | b01 |
| JDK-8207566 | 11.0.1 | Philip Race | P3 | Resolved | Fixed | b02 |
JDK 11 currently has harfbuzz v 1.8.1
Harfbuzz 1.8.2 was just released with important stability fixes.
We should pull it in to JDK11.
Harfbuzz 1.8.2 was just released with important stability fixes.
We should pull it in to JDK11.
- backported by
-
JDK-8207105 Upgrade HarfBuzz to 1.8.2
-
- Resolved
-
-
JDK-8207456 Upgrade HarfBuzz to 1.8.2
-
- Resolved
-
-
JDK-8207566 Upgrade HarfBuzz to 1.8.2
-
- Resolved
-
- relates to
-
JDK-8214123 Fix Harfbuzz 1.8.2 errors reported by GCC8
-
- Closed
-