8206428: Upgrade JDK11 to harfbuzz 1.8.2

Reviewed-by: serb